# PIM

./: .env.template  README.md  docker-compose  docker-compose.yml  main.py  pyproject.toml
backend/: CLAUDE.md  Dockerfile  RS_IMPLEMENTATION_GUIDE.md  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 0490c61f856c_add_moving_average_columns_to_daily_.py  1fba6af8eed1_daily_price_value_added.py  392d670a00c3_add_extended_analysis_fields_to_daily_.py  4e55a8b046a1_initial_migration_with_stock_model.py  584b35a1268e_add_unique_constraint_for_stock_id_and_.py  980f8bb9caf2_adjust_dailyprice_model_table_name.py  a0a0eea4b51b_add_relative_strength_fields_to_daily_.py  b7cbc9959554_enum_market.py  e371111c46aa_add_daily_prices_and_stock_dart_code.py  e7cad7282778_add_sector_field_to_stock_model.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: stocks.py
backend/app/core/: config.py
backend/app/crud/: stock.py
backend/app/db/: base.py  session.py
backend/app/models/: stock.py
backend/app/schemas/: stock.py
backend/app/services/: calculate_moving_averages.py  calculate_rs_momentum.py  calculate_rs_rankings.py  comprehensive_analysis.py  create_all_daily_prices.py  create_all_stocks_today.py  stock_analysis.py  stock_historical_data.py
z_docs/: alembic_guide.md
